# cht-studio

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
public/runner/: index.html
public/runner/assets/: __vite-optional-peer-dep_libxslt_enketo-transformer_false-CLK_4gP5.js  index-BvpWuGoM.css  index-JlapoxXZ.js
scripts/: scan-secrets.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: FormBuilder.tsx  Formbuilder.tsx
src/components/AppLayout/: index.tsx
src/components/AppLyout/: index.tsx
src/components/FormEditor/: index.tsx
src/components/RunnerWindow.ts/: index.ts
src/components/functional/: File.tsx
src/components/functional/RunnerWindow/: index.ts
src/components/projects/Emulator/: index.tsx
src/components/projects/FormEditorPage/: index.tsx
src/components/projects/Formbuilder/: calculateAppearances.ts  calculateAppearances.tsx  index.tsx  index_old.tsx  types.ts  xmlSnippets.tsx
src/components/projects/Overview/: index.tsx
src/components/test/: formeo.d.ts  index.tsx
src/components/ui/: accordion.tsx  button.tsx  menubar.tsx
src/lib/: utils.ts
src/routes/Project/: index.tsx
src/routes/Project/components/: FormCard.tsx  (+2 more)
src/routes/Projects/: index.tsx
(+15 files in other folders)
