[package]
name = "cht_studio"
version = "0.1.0"
description = "A users application for creating and managing Community Health Toolkit applications."
authors = ["Astrozyt"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Astrozyt/cht-studio"
homepage = "https://github.com/Astrozyt/cht-studio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xform_to_xml = {path="../packages/xform_to_xml" }
xformify-core = {path="../packages/xformify/xformify-core"}
tauri-plugin-sql = {version = "2", features = ["sqlite"] }
# rusqlite = { version = "0.31", features = ["bundled"] }



